# cogeval-platform-contracts

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ??.md  ADDING_A_CONTRACT.md  COG_CASES_V1.md  COG_CASES_V2.md  COG_CASES_V3.md  COMPATIBILITY_POLICY.md  DISTRIBUTION_CLAIMS_V1.md  GATEWAY_CONSISTENCY_V1.md  INTERFACE_CAPABILITY_CATALOG_V1.md  MODEL_CAPABILITY_CATALOG_V1.md  MODEL_CAPABILITY_CATALOG_V2.md  MODEL_PRICING_CATALOG_V1.md  PRODUCER_CONSUMER_CI.md  PROVIDER_CAPABILITY_CATALOG_V1.md  PROVIDER_INTERFACE_CATALOG_V1.md  SELF_RUN_PACKAGES_V1.md  WORKBENCH_ACCOUNTS_V1.md  契约.md
docs/integrations/: README.md  TEMPLATE.md  workbench-accounts-v1.md  workbench-api-key-provider-catalog-v1.md  workbench-cog-cases-current.md  workbench-cog-cases-v1.md  workbench-distribution-claims-v1.md  workbench-gateway-consistency-v1.md  workbench-model-capability-catalog-v2.md  workbench-model-pricing-v1.md  workbench-provider-capability-catalog-v1.md  workbench-self-run-package-ingest-v1.md  workbench-self-run-package-ingest-v2.md
docs/superpowers/plans/: 2026-07-10-model-pricing-catalog.md
docs/superpowers/specs/: 2026-07-10-model-pricing-catalog-design.md
src/cogeval_platform_contracts/: __init__.py  _resources.py
src/cogeval_platform_contracts/cog_cases/: __init__.py  current.py  resources.py  v1.py  v2.py  v3.py
src/cogeval_platform_contracts/distribution_claims/: __init__.py  resources.py  v1.py
src/cogeval_platform_contracts/failure_reasons/: __init__.py  definitions.py  resources.py  v1.py
src/cogeval_platform_contracts/gateway_consistency/: __init__.py  resources.py  v1.py
tests/: test_cog_case_json_schema.py  test_cog_cases_v1.py  test_cog_cases_v2.py  test_cog_cases_v3.py  test_current_contracts.py  test_distribution_claim_json_schema.py  test_distribution_claims_v1.py  test_failure_reasons.py  test_gateway_consistency_json_schema.py  test_gateway_consistency_v1.py  test_model_capabilities_v1.py  test_model_capabilities_v2.py  test_model_capability_json_schema.py  test_model_capability_json_schema_v2.py  test_model_capability_resources.py  test_model_pricing_documentation.py  test_model_pricing_json_schema.py  test_model_pricing_resources.py  test_model_pricing_v1.py  test_provider_capabilities_v1.py  test_provider_capability_compatibility.py  test_provider_capability_json_schema.py  test_provider_capability_resources.py  test_provider_interface_compatibility.py  test_provider_interface_json_schema.py  test_provider_interface_resources.py  test_provider_interfaces_v1.py  test_self_run_package_json_schema.py  test_self_run_packages_v1.py  test_self_run_packages_v2.py  test_self_run_packages_v2_schema.py  test_workbench_account_json_schema.py  test_workbench_accounts_v1.py
(+80 files in other folders)
