[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogeval-platform-contracts"
version = "0.1.0"
description = "Shared contracts between the COGEval platform and Workbench."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cogeval_platform_contracts = ["provider_capabilities/schemas/*.json", "provider_capabilities/fixtures/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

