[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogeval-platform-contracts"
version = "0.1.1"
description = "Shared contracts between the COGEval platform and Workbench."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
test = [
  "jsonschema>=4.22",
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cogeval_platform_contracts = [
  "py.typed",
  "provider_capabilities/schemas/*.json",
  "provider_capabilities/fixtures/*.json",
  "model_capabilities/schemas/*.json",
  "model_capabilities/fixtures/*.json",
  "provider_interfaces/schemas/*.json",
  "provider_interfaces/fixtures/*.json",
  "self_run_packages/schemas/*.json",
  "self_run_packages/fixtures/*.json",
  "cog_cases/schemas/*.json",
  "cog_cases/fixtures/*.json",
  "distribution_claims/schemas/*.json",
  "distribution_claims/fixtures/*.json",
  "gateway_consistency/schemas/*.json",
  "gateway_consistency/fixtures/*.json",
  "workbench_accounts/schemas/*.json",
  "workbench_accounts/fixtures/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
